--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,9 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
+*.swap
+.DS_Store
+
 # Code Injection
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
